# sqlite-knowledge-graph

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVLOG.md  HYPEREDGE_CODE_REVIEW_REPORT.md  HYPEREDGE_REVIEW_SUMMARY.md  LICENSE  MORE_EXTENSION_FUNCTIONS.md  PHASE3_PLAN.md  PROJECT.md  README.md  research.md  test_extension.sql
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benches/: turboquant_bench.rs
docs/quality/: domains.md
examples/: async_demo.rs  test_extension.rs
openspec/: smartvector.spec.md
openspec/changes/quaque-versioning/: design.md  proposal.md  tasks.md
openspec/changes/quaque-versioning/specs/version-diff/: spec.md
openspec/changes/quaque-versioning/specs/version-merge/: spec.md
openspec/changes/quaque-versioning/specs/version-query/: spec.md
openspec/changes/quaque-versioning/specs/version-snapshot/: spec.md
openspec/changes/quaque-versioning/specs/version-store/: spec.md
src/: embed.rs  error.rs  extension.rs  functions.rs  lib.rs  migrate.rs  schema.rs
src/algorithms/: connected.rs  louvain.rs  mod.rs  pagerank.rs
src/async_kg/: embed.rs  mod.rs
src/export/: mod.rs
src/graph/: entity.rs  error.rs  hyperedge.rs  mod.rs  relation.rs  ripple.rs  traversal.rs
src/rag/: embedder.rs  error.rs  mod.rs  smart_retrieval.rs
src/vector/: confidence.rs  error.rs  mod.rs  store.rs  turboquant.rs
src/version/: diff.rs  merge.rs  mod.rs  query.rs  snapshot.rs  store.rs
tests/: async_integration.rs  comparison_report.md  integration.rs  turboquant_benchmark.rs
