[package]
name = "sqlite-knowledge-graph"
version = "0.1.0"
edition = "2021"

[lib]
name = "sqlite_knowledge_graph"
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlite-loadable = "0.0.6-alpha.6"
rusqlite = { version = "0.32", features = ["functions", "blob", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
shellexpand = "3.1"

[profile.release]
strip = true
