[package]
name = "sqlite-knowledge-graph"
version = "0.7.0"
edition = "2021"
description = "A Rust library for building and querying knowledge graphs using SQLite"
license = "MIT"
repository = "https://github.com/yourusername/sqlite-knowledge-graph"
keywords = ["sqlite", "knowledge-graph", "graph-algorithms", "rag", "vector-search"]
categories = ["database", "algorithms", "data-structures"]

[lib]
name = "sqlite_knowledge_graph"
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlite-loadable = "0.0.6-alpha.6"
rusqlite = { version = "0.32", features = ["functions", "blob"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
ndarray = "0.15"

[dev-dependencies]
tempfile = "3.10"
shellexpand = "3.1"

[features]
default = []
# Enable bundled SQLite (conflicts with sqlite-loadable extension)
bundled = ["rusqlite/bundled"]

[profile.release]
strip = true