[package]
name = "sqlite-knowledge-graph"
version = "0.10.0"
edition = "2021"
authors = ["Hi Yen Wong"]
description = "A Rust library for building and querying knowledge graphs using SQLite as the backend, with graph algorithms, vector search, and RAG support"
license = "MIT"
repository = "https://github.com/hiyenwong/sqlite-knowledge-graph"
homepage = "https://github.com/hiyenwong/sqlite-knowledge-graph"
documentation = "https://docs.rs/sqlite-knowledge-graph"
readme = "README.md"
keywords = ["sqlite", "knowledge-graph", "graph-algorithms", "vector-search", "rag"]
categories = ["database", "data-structures", "science"]
rust-version = "1.70"
exclude = ["/.github", "/benches", "/tests", "/docs"]

[lib]
name = "sqlite_knowledge_graph"
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlite-loadable = "0.0.6-alpha.6"
rusqlite = { version = "0.32", features = ["functions", "blob"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
ndarray = "0.15"
chrono = "0.4.44"

[dev-dependencies]
tempfile = "3.10"
shellexpand = "3.1"
criterion = "0.5"

[[bench]]
name = "turboquant_bench"
harness = false

[features]
default = []
# Enable bundled SQLite (conflicts with sqlite-loadable extension)
bundled = ["rusqlite/bundled"]

[profile.release]
strip = true
